--- a/css/media.css
+++ b/css/media.css
@@ -2,7 +2,8 @@
 
 @media only screen and (max-width: 1660px) { /**/ }
 
-@media only screen and (max-width: 1400px) { /**/ }
+@media only screen and (max-width: 1400px) { /**/
+  html { font-size: 9.5px; } }
 
 @media only screen and (max-width: 1300px) { /**/ }
 
