--- a/css/main.css
+++ b/css/main.css
@@ -5978,7 +5978,7 @@ p { font-family: "Open Sans"; color: #000000; font-size: 1.8rem; font-weight: 40
 
 .section-stat { padding: 16rem 0 8rem 0; }
 
-.section-stat .stat-items { margin-top: 6rem; display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-orient: horizontal; -webkit-box-direction: normal; -webkit-flex-direction: row; -ms-flex-direction: row; flex-direction: row; -webkit-box-align: start; -webkit-align-items: flex-start; -ms-flex-align: start; align-items: flex-start; -webkit-box-pack: center; -webkit-justify-content: center; -ms-flex-pack: center; justify-content: center; }
+.section-stat .stat-items { margin-top: 5.5rem; display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-orient: horizontal; -webkit-box-direction: normal; -webkit-flex-direction: row; -ms-flex-direction: row; flex-direction: row; -webkit-box-align: start; -webkit-align-items: flex-start; -ms-flex-align: start; align-items: flex-start; -webkit-box-pack: center; -webkit-justify-content: center; -ms-flex-pack: center; justify-content: center; }
 
 .section-stat .stat-item { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-orient: horizontal; -webkit-box-direction: normal; -webkit-flex-direction: row; -ms-flex-direction: row; flex-direction: row; -webkit-box-align: start; -webkit-align-items: flex-start; -ms-flex-align: start; align-items: flex-start; -webkit-box-pack: start; -webkit-justify-content: flex-start; -ms-flex-pack: start; justify-content: flex-start; }
 
@@ -6100,9 +6100,45 @@ p { font-family: "Open Sans"; color: #000000; font-size: 1.8rem; font-weight: 40
 
 .section-faq .faq-item.active svg { -webkit-transform: rotate(180deg); -ms-transform: rotate(180deg); transform: rotate(180deg); }
 
-.section-about { padding-top: 6rem; padding-bottom: 21rem; min-height: 80vh; }
+.section-about { padding-top: 6rem; padding-bottom: 16rem; min-height: 80vh; }
 
 .section-about .about { padding-top: 3rem; }
+
+.section-about .about-text { margin-top: 3rem; }
+
+.section-about .about-text .paragraph { line-height: 3rem; }
+
+.section-about .about-exert { -webkit-box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.2); box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.2); -webkit-border-radius: 13px; border-radius: 13px; max-width: 80rem; width: 100%; padding: 4.5rem 10rem 3rem 10rem; margin: 8.5rem auto; background: url(../img/scob.svg) no-repeat top 3.5rem left 3rem, #fff; -webkit-background-size: 3.7rem 2.6rem; background-size: 3.7rem 2.6rem; }
+
+.section-about .about-exert .title { line-height: 4.1rem; margin-bottom: 3rem; }
+
+.section-about .about .form-page { margin: 7rem 0 0 0; }
+
+.section-about .about-form .title { margin-bottom: 1.5rem; }
+
+.section-about .partners { margin: 7rem 0 10rem 0; }
+
+.section-about .partners-items { margin-top: 5rem; padding: 0 9rem; display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-orient: horizontal; -webkit-box-direction: normal; -webkit-flex-direction: row; -ms-flex-direction: row; flex-direction: row; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: justify; -webkit-justify-content: space-between; -ms-flex-pack: justify; justify-content: space-between; }
+
+.section-about .partners-item { max-width: 16rem; width: auto; height: auto; }
+
+.section-about .partners-item img { max-width: 100%; width: auto; max-height: 100%; height: auto; -webkit-filter: saturate(0); filter: saturate(0); -webkit-transition: 0.24s ease-in; -o-transition: 0.24s ease-in; transition: 0.24s ease-in; }
+
+.section-about .partners-item:hover img { -webkit-filter: saturate(100%); filter: saturate(100%); }
+
+.section-about .partners-item:last-child { height: 5.2rem; }
+
+.section-about .stat { margin: 8.5rem 0; }
+
+.section-about .stat-items { margin-top: 5.5rem; display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-orient: horizontal; -webkit-box-direction: normal; -webkit-flex-direction: row; -ms-flex-direction: row; flex-direction: row; -webkit-box-align: start; -webkit-align-items: flex-start; -ms-flex-align: start; align-items: flex-start; -webkit-box-pack: center; -webkit-justify-content: center; -ms-flex-pack: center; justify-content: center; }
+
+.section-about .stat-item { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-orient: horizontal; -webkit-box-direction: normal; -webkit-flex-direction: row; -ms-flex-direction: row; flex-direction: row; -webkit-box-align: start; -webkit-align-items: flex-start; -ms-flex-align: start; align-items: flex-start; -webkit-box-pack: start; -webkit-justify-content: flex-start; -ms-flex-pack: start; justify-content: flex-start; }
+
+.section-about .stat-item__img { margin-top: .65rem; margin-right: 2rem; width: 6.4rem; height: 6.4rem; }
+
+.section-about .stat-item__img img { width: 100%; height: 100%; }
+
+.section-about .stat-item:nth-child(2) { margin: 0 9.5rem; }
 
 .section-blog { padding-top: 6rem; padding-bottom: 16rem; min-height: 80vh; }
 
@@ -6201,6 +6237,22 @@ p { font-family: "Open Sans"; color: #000000; font-size: 1.8rem; font-weight: 40
 .form-block { position: relative; width: 28rem; }
 
 .form-block label { font-weight: 400; font-size: 1.8rem; font-family: "Open Sans"; line-height: 3.4rem; color: #231F20; top: 50%; display: block; left: 0; -webkit-transition: 0.24s ease-in; -o-transition: 0.24s ease-in; transition: 0.24s ease-in; -webkit-transform: translateY(-50%); -ms-transform: translateY(-50%); transform: translateY(-50%); z-index: 2; -webkit-backface-visibility: hidden; backface-visibility: hidden; position: absolute; }
+
+.form-page { max-width: 100%; width: 100%; }
+
+.form-page .form-rows { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-align: start; -webkit-align-items: flex-start; -ms-flex-align: start; align-items: flex-start; -webkit-box-pack: justify; -webkit-justify-content: space-between; -ms-flex-pack: justify; justify-content: space-between; -webkit-box-orient: horizontal; -webkit-box-direction: normal; -webkit-flex-direction: row; -ms-flex-direction: row; flex-direction: row; }
+
+.form-page .form-row { width: 48.5%; }
+
+.form-page .form-row + .form-row { margin-top: 0; }
+
+.form-page .form-block { margin-right: 3rem; }
+
+.form-page .form-block:last-child { margin-right: 0; }
+
+.form-page .form-check { max-width: 35rem; width: 100%; margin: 6rem auto 3rem auto; }
+
+.form-page .btn { margin: 0 auto; }
 
 .pagination { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-orient: horizontal; -webkit-box-direction: normal; -webkit-flex-direction: row; -ms-flex-direction: row; flex-direction: row; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: center; -webkit-justify-content: center; -ms-flex-pack: center; justify-content: center; margin-top: 6rem; }
 
